tests/ui/block_pool_read_storage.stderr
error[E0502]: cannot borrow `storage[_]` as immutable because it is also borrowed as mutable
  --> tests/ui/block_pool_read_storage.rs:16:15
   |
15 |     BlockPool::create(pool.into_ref(), &mut storage, &Default::default()).unwrap();
   |                                        ------------ mutable borrow occurs here
16 |     use_block(&storage[0]);
   |               ^^^^^^^^^^^ immutable borrow occurs here
17 | }
   | - mutable borrow might be used here, when `pinned` is dropped and runs the `Drop` code for type `BlockPoolContext`
